Fix overlapping inserter popover

--- a/packages/block-editor/src/components/block-list/style.scss
+++ b/packages/block-editor/src/components/block-list/style.scss
@@ -537,6 +537,18 @@
 	}
 }
 
+.block-editor-block-list__insertion-point-popover {
+	z-index: z-index(".block-editor-block-list__insertion-point-popover");
+	position: absolute;
+
+	.components-popover__content {
+		background: none;
+		border: none;
+		box-shadow: none;
+		overflow-y: visible;
+	}
+}
+
 .components-popover.block-editor-block-list__block-popover {
 	z-index: z-index(".block-editor-block-list__block-popover");
 	position: absolute;
